# desktop-indexer

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: app.rs  cache.rs  cli.rs  daemon.rs  daemon_client.rs  desktop.rs  empty_query.rs  frequency.rs  ipc.rs  launch.rs  main.rs  models.rs  output.rs  search.rs  xdg.rs
src/commands/: common.rs  daemon.rs  launch.rs  list.rs  mod.rs  parse.rs  scan.rs  search.rs  status.rs
