[package]
name = "desktop-indexer"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.54", features = ["derive"] }
postcard = { version = "1.1.3", features = ["use-std"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
shlex = "1.3.0"
walkdir = "2.5.0"
